--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT = 5000
 URL= mongodb+srv://kaifalam9580:12345@cluster0.ubfq83m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=JKVjkbB$%DFd5d$%$Kui78gliuj7l8IGV8977Y78btb78B87F
 ADMIN_SECRET_KEY = 12345
-CLIENT_URL = chat-frontend-delta-five.vercel.app
+CLIENT_URL = https://chat-frontend-iota-puce.vercel.app/login
 CLOUDINARY_CLOUD_NAME=dbhrq7tmg
 CLOUDINARY_API_KEY=718671724531143
 CLOUDINARY_API_SECRET=JiUGVvF2C2LOyszjxzDJ2nfEMJw
